# YATask

./: README.md  SpeechRecognition.py  commands.py  main.py  pyproject.toml  requirements.txt
voice/: GPT.opus  love.opus  sql.opus
